# LibAFL

fuzzers/baby_fuzzer_palpebratum/: Cargo.toml  example_script.sh  example_script_write_file.sh
fuzzers/baby_fuzzer_palpebratum/hmms/: config.yml  requirements.txt
fuzzers/baby_fuzzer_palpebratum/hmms/pipeline/: load_data.py
fuzzers/baby_fuzzer_palpebratum/hmms/pipeline/coverage/: coverage_calculation.py  hmms.py  measures.py
fuzzers/baby_fuzzer_palpebratum/hmms/pipeline/preprocessing/: preprocess.py  util.py
fuzzers/baby_fuzzer_palpebratum/hmms/pipeline/preprocessing/autoencoder/: chiu_autoencoder.py  network_packet_autoencoder.py
fuzzers/baby_fuzzer_palpebratum/hmms/pretrained_models/: hmm_all_ae_51  hmm_all_chiu_51
fuzzers/baby_fuzzer_palpebratum/hmms/pretrained_models/ae_chiu_encoder_all/: keras_metadata.pb  saved_model.pb
fuzzers/baby_fuzzer_palpebratum/hmms/pretrained_models/ae_chiu_encoder_all/variables/: variables.data-00000-of-00001  variables.index
fuzzers/baby_fuzzer_palpebratum/hmms/pretrained_models/ae_encoder_all/: keras_metadata.pb  saved_model.pb
fuzzers/baby_fuzzer_palpebratum/hmms/pretrained_models/ae_encoder_all/variables/: variables.data-00000-of-00001  variables.index
fuzzers/baby_fuzzer_palpebratum/hmms/scripts/: hmm_coverage.py  preprocessing.py  test.py
fuzzers/baby_fuzzer_palpebratum/src/: main_blackbox.rs  main_hmms.rs  main_random.rs
libafl/: Cargo.toml
libafl/src/corpus/: inmemory_ondisk.rs
libafl/src/events/: mod.rs
libafl/src/executors/: hmm.rs  inprocess.rs  interleaved.rs  mod.rs  tcp.rs  with_observers.rs
(+6 files in other folders)
